--- a/src/components/Character/character.scss
+++ b/src/components/Character/character.scss
@@ -1,34 +1,37 @@
 // variable
-$primary: #b71c1c;
-$secondary: #f05545;
-$dark: #7f0000;
+$black: #393939;
+$red: #e62429;
 
 .card {
-  width: 30%;
-  height: 500px;
+  width: 300px;
+  height: 450px;
   border: 1px solid #ccc;
   margin: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   border-radius: 5px;
   background-color: white;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  padding: 0;
+  overflow: hidden;
 
   img {
-    border-radius: 10px;
-    padding: 5px;
-    width: 300px;
-    height: 300px;
+    border-radius: 5px 5px 0 0;
+    padding: 0;
+    width: 100%;
+    height: 400px;
     display: block;
-    margin: 20px;
+    margin: 0;
+    border: none;
+    overflow: hidden;
   }
 
   h1 {
-    color: $dark;
-    font-size: 25px;
+    color: $black;
+    font-size: 20px;
+    margin: 15px;
   }
 
   .buttons {
@@ -37,15 +40,19 @@ $dark: #7f0000;
     justify-content: space-around;
 
     button {
-      background-color: $primary;
+      background-color: #fff;
       width: 80px;
       border: none;
-      border-radius: 5px;
-      margin: 5px;
-      padding: 5px;
-      color: white;
+      color: $red;
+      text-transform: uppercase;
+      font-weight: 700;
+      margin-top: 15px;
+      margin-bottom: 15px;
       &:active {
-        background-color: $dark;
+        background-color: $black;
+        border-radius: 5px;
+        color: white;
+
       }
     }
   }
