--- a/src/components/CharacterPage/CharacterPage.scss
+++ b/src/components/CharacterPage/CharacterPage.scss
@@ -1,3 +1,7 @@
+// variable
+$black: #393939;
+$red: #e62429;
+
 * {
   box-sizing: border-box;
 }
@@ -9,24 +13,57 @@
   height: 100vh;
   margin-left: 30px;
 
+
   .hero {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
+    margin: 10px;
+    border-radius: 10px;
+    max-width: 50%;
     #profile {
       width: 500px;
-      border-radius: 10px;
+      height: 500px;
+      border-radius: 10px 0 0 10px;
       margin-right: 30px;
+      border-right: 4px solid $red;
     }
+    .h1{
+      display: flex;
+      flex-direction: column;
+      align-items: left;
+      justify-content: left;
+      h1{
+        font-size: 40px;
+        color: $red;
+        text-align: left;
+        margin-bottom: 10px;
+        margin-right: 10px;
+  
+      }
+      p, h3{
+        text-align: left;
+        margin-bottom: 10px;
+        color: $black;
+        margin-right: 20px;
+  
+      }
+  
+      button{
+        background-color: #fff;
+        border: none;
+        color: $red;
+        text-transform: uppercase;
+        text-align: left;
+        font-weight: bold;
+        margin-top: 50px;
+        font-size: 18px;
+      }
+    }
+    
+    
   }
 }
 
-.title {
-  display: flex;
-  margin-left: 50px;
-  margin-top: 50px;
-  #logo {
-    width: 100px;
-    height: auto;
-  }
-}
+
