--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,6 +2,8 @@
 $primary: #b71c1c;
 $secondary: #f05545;
 $dark: #7f0000;
+$black: #393939;
+$red: #e62429;
 
 * {
   box-sizing: border-box;
@@ -9,16 +11,9 @@ $dark: #7f0000;
 }
 
 .nav-wrapper {
-  background-color: $primary;
+  background-color: $red;
 }
 .nav {
   height: 50px;
   width: 100%;
-  max-width: 1200px;
-  margin-left: 50px;
-
-  h1 {
-    color: white;
-    text-align: left;
-  }
 }
