--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -6,12 +6,17 @@ $red: #e62429;
   display: flex;
   justify-content: center;
   margin-top: 30px;
+
   input {
     width: 400px;
     height: 30px;
     border-radius: 5px;
     border: none;
     border: 1px solid #ccc;
+    &::placeholder{
+      color: #ccc;
+      padding-left: 5px;
+    }
   }
   button {
     background-color: $red;
@@ -27,6 +32,8 @@ $red: #e62429;
       background-color: $black;
     }
   }
+
+  
 }
 .main-container {
   display: flex;
@@ -71,11 +78,11 @@ $red: #e62429;
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
     img {
-      width: 100px;
-      height: 100px;
-      border-radius: 5px;
+      width: 90px;
+      height: auto;
+      border-radius: 10px;
       padding: 5px;
-      margin-bottom: 10px;
+      margin-bottom: 0;
     }
 
     .content {
